[package]
name = "ros1_rlr"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD 3-Clause"
publish = false

[dependencies]
anyhow = "1.0.86"
roslibrust = { version="0.9.0", features = ["ros1"] }
roslibrust_codegen = "0.9.0"
roslibrust_codegen_macro = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
smart-default = "0.7.1"
tokio = "1.38.0"

